# src_platform_hotplug-clip

./: AUTHORS  CHANGELOG  Makefile.in  README.md  configure  configure.ac
common/: Makefile.in  common.c  common.h
device-admind/: Makefile.in  clip-device-request.c  device-admind.c  powerdown.c  powerdown.h  soundcard.c  soundcard.h  switch-sound-context
eventd/: Makefile.in  clip-device-notify  clip-fnkeys-handler  clip-suspend  clip-suspend-request.c  clip-suspend-xlock  clip-sysfs-perms  eventd.c  eventd.h  eventd_input.c  eventd_netlink.c  eventd_socket.c
helpers/: usb_scanner_create_device_list
hotplug/: Makefile.in  block.c  firmware.c  hotplug.c  hotplug.h  hotplug_initrd.c  input.c  log.c  net.c  printer.c  screen.c  usb.c  video.c  wwan.c
img/: AUTHORS  Makefile.in
input-attach/: Makefile.in  inputattach.c
input-gettype/: Makefile.in  input_gettype.c
input-notifier/: Makefile.in  clip-input-notify.c
scripts/: Makefile.in  block  deviced.start  deviced.stop  devices.sub  input  mkdevices  net  scanner_devices.sub  screen  usb  wwan
